# Phonebook_CPP

./: CMakeLists.txt  README.md  contacts.txt
docs/: UMLDiagram.mdj
include/: AddContactState.h  ContactModel.h  EditContactState.h  InputHandler.h  MainMenuState.h  PhoneBook.h  SearchContactState.h  State.h  StateMachine.h  ViewContactState.h
src/: AddContactState.cpp  Contact.cpp  DeleteContactState.cpp  EditContactState.cpp  InputHandler.cpp  MainMenuState.cpp  PhoneBook.cpp  SearchContactState.cpp  StateMachine.cpp  ViewContactState.cpp  main.cpp
